edited into in report

--- a/Report/Notation & Thms/main.tex
+++ b/Report/Notation & Thms/main.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{article}
+\documentclass[12pt]{scrartcl}
 
 \include{amsfonts,amssymb,amsmath,amsthm,txfonts,pxfonts,mathrsfs,enumitem}
 \usepackage[headheight=15pt,paperwidth=8.5in, paperheight=11in]{geometry}
@@ -19,38 +19,24 @@
 \renewcommand{\headrulewidth}{0pt}
 \pagestyle{fancy}
 
-\title{SOMETHING}
+\title{Emerging Schools}
+\subtitle{A guide for post-secondary investment}
 \begin{document}
 \maketitle
 
-\setcounter{page}{1}
-\section*{Summary}
-\thispagestyle{empty}
-Insert summary stuff here. \\
-
-...
-
-
+\setcounter{page}{1}	
 
 \section{Introduction}
 	\subsection{The Problem}
-		The Goodgrant Foundation is a charitable organization with a mission 	to improve educational performance of undergraduates attending colleges 		and universities in the United States. The foundation intends to donate 		a total of \$100,000,000 US to appropriate group of schools each year, 			for five years. \\
-
-		We are focusing on developing a model to optimize the investment 			strategy. 
-
-	\subsection{Some criteria for the model}
-	\begin{itemize}
-		\item Avoid duplicate investements of other large grant organization such as the Lumina Foundation and Gates Foundation. 
-		\item 
-	\end{itemize}
+		The Goodgrant Foundation is a charitable organization with a mission to improve educational performance of undergraduate students attending colleges and universities in the United States. The foundation intends to donate a total of 100,000,000 USD to appropriate group of schools each year, for five years. They also wish to avoid investing in universities that already recieve grants from major chartiable organizations such as the Gates and Lumina Foundation.
 	
-\section{Assumptions and Rationale/Justification}
+	\subsection{Assumptions and Rationale/Justification}
 	\begin{itemize}
 		\item \textbf{The Gates Foundation and Lumina Foundation will continue to donate to the same school for at least two years:} If first year donation shows promise results then they will continue to donate for a second time or more. If first year donation shows inadequate result, then they will increase fund for a second donation in hope for better result (i.e. give another chance). This allow us to avoid duplicate investment by reading their donation data from 2015 to see a list of schools the two foundations donated to. 
-		
-		\item \textbf{Each school will use the donated funds in the most appropriate and optimal ways.}
-		
-		\item \textbf{Students who received grant will stay in the program and successfully graduate:} There are many factors that could cause students to not be able to graduate, but we will focus on financial support because it is the root of other factors. For example, financial stress causes students to performance poorly. 
+				
+		\item \textbf{Students who received grant will stay in the program and successfully graduate:} There are many factors that could cause students to not be able to graduate, but we will focus on financial support because it is the root of other factors. However, we will provide a note on how to improve the model with the assumption that receiving a grant simply reduces the likelihood of not completing  a degree.
+
+		\item \textbf{} 
 	\end{itemize}
 \clearpage
 \section{Model Design and Approach}
