--- a/Report/Notation & Thms/main.tex
+++ b/Report/Notation & Thms/main.tex
@@ -19,11 +19,14 @@
 \renewcommand{\headrulewidth}{0pt}
 \pagestyle{fancy}
 
-\title{Emerging Schools}
-\subtitle{A guide for post-secondary investment}
+\title{Emerging Markets: Comparing University Poverty Alleviation with Charitable Education Donations}
+\subtitle{A Model for Post-Secondary Investments}
+
 \begin{document}
 \maketitle
-
+\newpage
+\tableofcontents
+\newpage
 \setcounter{page}{1}	
 
 \section{Introduction}
@@ -69,7 +72,7 @@ The first section outlines determining bench mark points and comparing the rest 
 		\item \underline{Class}, refers to which benchmark within the group, the university is closest to.
 	\end{enumerate}
 	
-	\subsection{Benchmark Setting}
+	\subsection{Benchmark Selection}
 	
 	First we omitted any below medium size universities or communal universities such as racial or religious schools. Then we partition all universities by number of years required for graduation. Lastly, we rank the universities by the amount of their poverty elevation standards: \\ \\ 
 	$$
@@ -83,7 +86,7 @@ The first section outlines determining bench mark points and comparing the rest 
 	$$
 	Where $o$, is to represent the benchmark index of the class $i$.
 
-	\subsection{Identifying Matches and Schools to be Invested}
+	\subsection{Categorizing Institutions into Classes}
 	
 	We aim to classify each university into some class $i$. This is done via the kNN algorithm: a non-parametric method used in classification supervised learning problems. The output is determined by a majority vote, where the object is assigned to the class most common with it's neighbours. \cite{Hastie}\\
 
@@ -96,7 +99,7 @@ That is, if $u$ belongs to the $k$-th class then
 	$$
 
 	
-	\subsection{Determine Investment}
+	\subsection{Investment Strategy}
 
 	\subsubsection{Number of student-Helped}
 		Let $A_j^{[i]}$ be the amount we invest in university $j$ of the class $i$, and $T_j^{[i]}$ be the tuition of low-income students. Then we can compute the number of students who we help as:
@@ -122,7 +125,7 @@ That is, if $u$ belongs to the $k$-th class then
 		$$
 		We use this to compute the increase to the social well-being of students going to this university. 
 
-	\subsubsection{Return on Investment}
+	\subsubsection{Return on Investment (ROI)}
 		The return on investment for our model will be the change in the level of alleviation of poverty provided by our investment.\\
 		We do this as follows:
 		$$
@@ -190,10 +193,32 @@ That is, if $u$ belongs to the $k$-th class then
 		
 \section{Model Testing on Big Data} 
 
-\section{Sensitivity Analysis} 
+\section{Discussion} 
+\subsection{Sensitivity Analysis}
+In order to test model stability, we impose a radius condition to the kNN selection algorithm. The model testing outlined in Section 3 used an unrestricted subset of the data. We compute the the mean and standard deviation for each class $i$. Then each value exceeding k from k = 1,..3 standard deviations away was omitted from the data passed to the investment algorithm. The goal is to partition the dataset such that the subset data will have 68\%, 95\%, and 99.7\% of the data.\\
+
+With all other variables the same the ROI for each standard deviation(STD) is:
+\begin{enumerate}
+\item STD 1 ROI: 0.0353
+\item STD 2 ROI: 0.0499
+\item STD 3 ROI: 0.0474
+\end{enumerate}
+
+All ROI are relatively the same suggesting that the model does well with any size of data input. 
+
+\subsection{Strengths}
+\subsection{Weaknesses}
 
 \section{Conclusions}
 \clearpage
+
+\section{Letter to Mr. Alpha Chiang}
+Dear Mr. Alpha Chiang,
+
+
+\newpage
+
+
 
 \begin{thebibliography}{10}
 	\bibitem{Trom} Trombitas, Kate.  \emph{Financial Stress: An Everyday Reality for College Students}. Inceptia, July 2012. PDF. 
