--- a/Report/Big Data/old-report+big data.tex
+++ b/Report/Big Data/old-report+big data.tex
@@ -186,8 +186,41 @@ That is, if $u$ belongs to the $k$-th class then
 				\end{aligned}	
 		\end{equation*}
 		
-\section{Model Testing on Big Data} 
-	
+\section{Model Application} 
+	As discussed in the previous section, the first goal in the analysis is to find a list of benchmark schools. However, before doing so, we partitioned the schools by the type of degrees that they predominantly provide. This was due to the fact that otherwise, many pieces of data become `null', and the kNN algorithm becomes biased towards schools that have less-years-to-graduation.\\ 
+	\\
+	Once the partitioning was done, we applied the poverty alleviation rank (PAK). Which was inspired by the results of Trombitas \cite{Trom} and College-Score Card \cite{US}.\\
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.6\textwidth]{2yr-col.png}
+		\caption{2 year program}
+		\label{fig:prog2}
+	\end{figure}
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.6\textwidth]{4yr-col.png}
+		\caption{Bachelor program}
+		\label{fig:prog4}
+	\end{figure}
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.6\textwidth]{6yr-col.png}
+		\caption{Grad program}
+		\label{fig:prog2}
+	\end{figure}
+	Once we acquired this data, we chose the top 10 schools from each school type as our benchmark schools. Since we did not want to overlap with grants given by other institutions, we filtered the next list using the data given by the Gates\cite{Bill} and Lumina \cite{Grant} Foundations.\\
+	\\
+	As this point, we used the kNN algorithm as the method of selection for the nearest best schools. As we wish to avoid investing in the top tier schools, and would rather invest in schools with the potential to become the top-tier.\\ 
+	Prior to the application of the kNN algorithm we had to normalize the data by transforming each variable to a scale in $[0,1]$, as otherwise variables measure in larger values would be favored to smaller variables.\\
+	\\
+	This identification provided us with the following schools (please note that this is not the entire dataset, the full dataset will be provided separately) \ref{fig:kNN}.
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.6\textwidth]{6yr-col.png}
+		\caption{Sample of kNN results}
+		\label{fig:kNN}
+	\end{figure}
+
 \section{Sensitivity Analysis} 
 
 \section{Conclusions}
